; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_dock.c_is_battery.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_dock.c_is_battery.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device_info = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@ACPI_VALID_HID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"PNP0C0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @is_battery to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_battery(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.acpi_device_info*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 1, i32* %5, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @acpi_get_object_info(i32 %6, %struct.acpi_device_info** %4)
  %8 = call i32 @ACPI_SUCCESS(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %32

11:                                               ; preds = %1
  %12 = load %struct.acpi_device_info*, %struct.acpi_device_info** %4, align 8
  %13 = getelementptr inbounds %struct.acpi_device_info, %struct.acpi_device_info* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @ACPI_VALID_HID, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %11
  store i32 0, i32* %5, align 4
  br label %28

19:                                               ; preds = %11
  %20 = load %struct.acpi_device_info*, %struct.acpi_device_info** %4, align 8
  %21 = getelementptr inbounds %struct.acpi_device_info, %struct.acpi_device_info* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @strcmp(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = icmp ne i32 %24, 0
  %26 = xor i1 %25, true
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %19, %18
  %29 = load %struct.acpi_device_info*, %struct.acpi_device_info** %4, align 8
  %30 = call i32 @kfree(%struct.acpi_device_info* %29)
  %31 = load i32, i32* %5, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %28, %10
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @ACPI_SUCCESS(i32) #1

declare dso_local i32 @acpi_get_object_info(i32, %struct.acpi_device_info**) #1

declare dso_local i32 @strcmp(i8*, i32) #1

declare dso_local i32 @kfree(%struct.acpi_device_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
